--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <img src="https://media.licdn.com/mpr/mpr/shrinknp_100_100/AAEAAQAAAAAAAArCAAAAJGU1OTAwZjQ4LWQwYTItNDJiZS04ZDE0LTQwYTg4MDRlOTk4NQ.jpg">
     <h1>Alvin's Blog</h1>
     <ul>
-      <li><a href="https://dash.generalassemb.ly/alvindivina08/build-your-own-blog-theme#">About Me</a></li>
+      <li><a href="https://alvindivina08.github.io/">About Me</a></li>
       <li><a href="http://www.yearup.org/">Year Up</a></li>
       <li><a href="http://www.yearup.org/seize-opportunity/">Apply</a></li>
     </ul>
