--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       background: url('https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/13238894_1125273670828995_5939250063111864815_n.jpg?oh=b83188e089e85efa0f2da49a4dd23f77&oe=59DD13DC');
       background-size: cover;                 
     background-repeat:   no-repeat;
-    background-position: bottom ; 
+    background-position: center; 
       color: white;
       margin:1 auto;
   max-width: 850px;
