--- a/philippines.html
+++ b/philippines.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
 <script src="/assets/jquery.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Londrina+Shadow' rel='stylesheet' type='text/css'>
@@ -35,25 +36,21 @@ p {
   background: -webkit-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.4));
   background: -moz-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.4));
   padding: 10px;
-  line-height: 28px;
+  line-height: 30px;
   text-align: justify;
   position: absolute;
   bottom: 0;
   margin: 0;
-  height: 30px;
   transition: height .5s;
   -webkit-transition: height .5s;
   -moz-transition: height .5s;
 }
-
-small {
+small { 
   opacity: 0;
 }
-
 .show-description p {
   height: 150px;
 }
-
 .show-description small {
   opacity: 1;
 }
@@ -70,37 +67,36 @@ small {
 .price {
   float: right;
 }
-@media (max-width: 500px) {
-  h1 {
-    font-size: 50px;
-    margin-top: 20px;
-    line-height: 40px;
-  }
-  h2 {
-    font-size: 20px;
-    margin: 20px 0 30px 0;
-  }
-  div {
-    margin: 20px 12px 0 12px;
-  }
-  p {
-    font-size: 20px;
-    line-height: 24px;
-  }
-  small {
-    font-size: 16px;
-  }
+  @media (max-width: 500px) {
+ h1 { font-size: 50px;
+ margin-top: 20px;
+ line-height: 40px;
+ }
+ h2 {
+   font-size: 20px;
+   margin: 20px 0 30px 0;
+ }
+ div {
+   margin: 20px 12px 0 12px;
+ }
+ p {
+   font-size: 20px;
+ line-height: 24px;
+ }
+ small {
+   font-size: 16px;
+ }
+ 
 }
-
 </style>
 
 </head>
 
 <body>
-<h1>Alvin's restaurant</h1>
+<h1>esha's restaurant</h1>
 <h2>a New York City eatery</h2>
 <div class="first">
-  <p>welsh onion soko<span class="price">$14</span><br />
+  <p>welsh onion soko <span class="price">$14</span><br />
   <small>Mustard sierra leone bologi kale chard beet greens black-eyed pea sorrel amaranth garlic tigernut spring onion summer purslane asparagus lentil. </small></p>
 </div>
 
@@ -115,9 +111,9 @@ small {
 </div>
 
 <script>
-  $('div').on('click', function() {
-      $(this).toggleClass('show-description');
-  });
+$('div').on('click', function(){
+  $(this).toggleClass('show-description');
+});
 </script>
 
 </body>
