--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#myPage">HOME</a></li>
-        <li><a href="#band">ISLAND</a></li>
+        <li><a href="https://alvindivina08.github.io/philippines.html#island">ISLAND</a></li>
         <li><a href="#tour">ALVIN</a></li>
         <li><a href="#contact">CONTACT</a></li>
         <li class="dropdown">
