--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="philippines.html#myPage">HOME</a></li>
+        <li><a href="philippines.html">HOME</a></li>
         <li><a href="#island">ISLAND</a></li>
         <li><a href="#tour">ALVIN</a></li>
         <li><a href="#contact">CONTACT</a></li>
