--- a/philippines.html
+++ b/philippines.html
@@ -170,7 +170,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#myPage">HOME</a></li>
         <li><a href="#island">ISLAND</a></li>
-        <li><a href="#tour">ALVIN</a></li>
+        <li><a href="index.html">ALVIN</a></li>
         <li><a href="#contact">CONTACT</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
