--- a/philippines.html
+++ b/philippines.html
@@ -164,7 +164,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="index.html">Philippines</a>
+      <a class="navbar-brand" href="philippines.html">Philippines</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
