--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="philippines.html">HOME</a></li>
-        <li><a href="#island">ISLAND</a></li>
+        <li><a href="philippines.html#island">ISLAND</a></li>
         <li><a href="#tour">ALVIN</a></li>
         <li><a href="#contact">CONTACT</a></li>
         <li class="dropdown">
