--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="philippines.html">HOME</a></li>
-        <li><a href="philippines.html#island">ISLAND</a></li>
+        <li><a href="philippines.html">ISLAND</a></li>
         <li><a href="#tour">ALVIN</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="philippines.html">CONTACT</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
           <span class="caret"></span></a>
