--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="philippines.html">Alvin</a>
+      <a class="navbar-brand" href="index.html">Alvin</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
