--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <li><a href="philippines.html">HOME</a></li>
         <li><a href="philippines.html">ISLAND</a></li>
         <li><a href="#tour">ALVIN</a></li>
-        <li><a href="philippines.html">CONTACT</a></li>
+        <li><a href="philippines.html#contact">CONTACT</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
           <span class="caret"></span></a>
